# halfdelivery_api

./: Pipfile  README.md  db3utf-8.csv  db3utf-8_noHead.csv  db3utf-8_renew.csv  pyproject.toml  requirements.txt
chat/: consumers.py  models.py
chat/migrations/: 0001_initial.py
config/: asgi.py  settings.py  urls.py
stores/: admin.py  models.py  serializers.py  urls.py  views.py
stores/migrations/: 0001_initial.py  0002_alter_stores_minprice.py  0002_stores_what.py  0003_alter_stores_id.py  0003_remove_stores_what.py  0004_alter_stores_minprice.py  0004_auto_20210906_2147.py  0005_alter_stores_id.py  0005_alter_stores_minprice.py  0006_alter_stores_minprice.py  0007_alter_stores_id.py
users/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20210821_1607.py  0003_auto_20210821_1608.py  0004_auto_20210903_1600.py  0004_auto_20210905_2157.py  0005_user_auth_number.py
