[tool.poetry]
name = "halfdelivery_api"
version = "0.1.0"
description = ""
authors = ["TomTimmy <70505699+TomTimmy@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
djangorestframework = "^3.12.4"
django-rest-knox = "^4.1.0"
Pillow = "^8.3.2"
django-seed = "^0.2.2"
PyJWT = "^2.1.0"
django-phonenumber-field = "^5.2.0"
black = "^21.8b0"

[tool.poetry.dev-dependencies]
black = {version = "^21.8b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
